--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "description": "A simple way create new UI for Smart contract on via etherui.net on truffle environment.",
   "dependencies": {
-    "babel-eslint": "^8.2.1",
-    "chalk": "^2.3.0",
+    "babel-eslint": "^8.2.3",
+    "chalk": "^2.4.1",
     "clear": "0.0.1",
     "clui": "^0.3.6",
-    "configstore": "^3.1.1",
+    "configstore": "^3.1.2",
     "figlet": "^1.2.0",
-    "inquirer": "^5.0.1",
-    "lodash": "^4.17.4",
+    "inquirer": "^5.2.0",
+    "lodash": "^4.17.10",
     "minimist": "^1.2.0",
     "restler": "^3.4.0",
     "touch": "^3.1.0"
@@ -61,10 +61,16 @@
   "homepage": "https://github.com/etherui/etherui-deploy#readme",
   "keywords": [
     "ethereum",
+    "ether",
     "rpc",
     "ui",
-    "smart contract",
-    "user interface for smart contract",
+    "ethjs",
+    "abi",
+    "cli",
+    "smart-contract",
+    "smartcontract",
+    "user-interface",
+    "userinterface",
     "deployment"
   ],
   "license": "MIT",
@@ -91,8 +97,7 @@
     "lint:eslint": "eslint --ignore-path .gitignore",
     "lint:js": "npm run lint:eslint -- . ",
     "lint:staged": "lint-staged",
-    "pretest": "npm run lint",
-    "release": "npmpub"
+    "pretest": "npm run lint"
   },
   "devDependencies": {
     "bignumber.js": "3.0.1",
