--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "configstore": "^3.1.2",
     "figlet": "^1.2.0",
     "inquirer": "^5.2.0",
-    "lodash": "^4.17.10",
-    "minimist": "^1.2.0",
+    "lodash": "^4.17.20",
+    "minimist": "^1.2.5",
     "restler": "^3.4.0",
     "touch": "^3.1.0"
   },
@@ -104,7 +104,7 @@
     "bn.js": "4.11.6",
     "chai": "3.5.0",
     "check-es3-syntax-cli": "0.1.3",
-    "coveralls": "2.11.9",
+    "coveralls": "^3.1.0",
     "cross-env": "1.0.7",
     "eslint": "2.10.1",
     "eslint-config-airbnb": "9.0.1",
@@ -116,8 +116,8 @@
     "istanbul": "0.4.5",
     "json-loader": "0.5.4",
     "lint-staged": "1.0.1",
-    "mocha": "3.1.2",
+    "mocha": "^8.1.3",
     "pre-commit": "1.1.3",
-    "rimraf": "2.3.4"
+    "rimraf": "^3.0.2"
   }
 }
